--- a/INDEX.html
+++ b/INDEX.html
@@ -3,10 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxygen:wght@300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="STYLE.css">
+    <script src="https://kit.fontawesome.com/90ecd35a7b.js" crossorigin="anonymous"></script>
+
     <title>Cards com Variaveis</title>
 </head>
 <body>
-    
+<style>
+:root{
+    --cor-span-cards01:#dff7f9;
+    --cor-span-cards02:#fef8de;
+    --cor-span-cards03:#ffebed;
+}
+</style>
+    <section>
+        <!-- CARDS 01 -->
+        <div class="container-cards">
+        <!-- CARD 1 -->
+        <div class="cards" id="card01">
+        <div style="background-color: var(--cor-span-cards01);" class="container-span">
+            <span>7:25 AM</span>
+        </div>
+        <i id="iconi" class="fa-solid fa-plane-departure fa-2xl" style="color: #0097ab;"></i>
+        <br>
+            <h5>Boston</h5>
+        </div>
+        <!-- CARD 2 -->
+        <div class="cards" id="card01">
+        <div style="background-color: var(--cor-span-cards01);" class="container-span">
+            <span>8:15 PM</span>
+        </div>
+        <i id="iconi" class="fa-solid fa-plane-arrival fa-2xl" style="color: #0097ab;"></i>
+        <br>
+            <h5>Madrid</h5>
+        </div>
+        <!-- CARD 3 -->
+        <div class="cards" id="card01">
+        <div style="background-color: var(--cor-span-cards01);" class="container-span">
+            <span>Translate</span>
+        </div>
+        <i id="iconi" class="fa-solid fa-language fa-2xl" style="color: #0097ab;"></i>
+        <br>
+
+            <h5>Spanish</h5>
+        </div>
+        </div>
+
+        <!-- --CARD 02-- -->
+        <div class="container-cards">
+            <!-- CARD 1 -->
+            <div class="cards" id="card02">
+            <div class="container-span" style="background-color: var(--cor-span-cards02);">
+                <span>Bike</span>
+            </div>
+            <i id="iconi" class="fa-solid fa-person-biking fa-2xl" style="color: #f79d00;"></i>
+            <br>
+            <h5>13.1 Miles</h5>
+            </div>
+            <!-- CARD 2 -->
+            <div class="cards" id="card02">
+                <div style="background-color: var(--cor-span-cards02);" class="container-span">
+                <span>Boat</span>
+                </div>
+                <i id="iconi" class="fa-solid fa-ship fa-2xl" style="color: #ff9f00;"></i>
+                <br>
+                <h5>90 Minutes</h5>
+            </div>
+            <!-- CRAD 3 -->
+            <div class="cards" id="card02">
+            <div style="background-color: var(--cor-span-cards02);" class="container-span">
+                <span>Drive</span>
+            </div>
+
+            <i id="iconi" class="fa-solid fa-car fa-2xl" style="color: #ff9f00;"></i>
+            <br>
+            <h5>48 Miles</h5>
+            </div>
+            </div>
+            
+            <!-- --CARDS 03-- -->
+            <div class="container-cards">
+                <!-- CARD 1 -->
+                <div class="cards" id="card03">
+                <div style="background-color: var(--cor-span-cards03);" class="container-span">
+                    <span>Morning</span>
+                </div>
+                <i id="iconi" class="fa-solid fa-mug-saucer fa-2xl" style="color: #d32e31;"></i>
+                <br>
+                <h5>Coffee</h5>
+                </div>
+                <!-- CARD 2 -->
+                <div class="cards" id="card03">
+                <div style="background-color: var(--cor-span-cards03);" class="container-span">
+                    <span>Afternoon</span>
+                </div>
+                <i id="iconi" class="fa-solid fa-dumbbell fa-rotate-by fa-2xl" style="color: #d32e31; --fa-rotate-angle: 60deg;"></i>
+                <br>
+                <h5>Gym</h5>
+                </div>
+                <!-- CARD 3 -->
+                <div class="cards" id="card03">
+                <div style="background-color: var(--cor-span-cards03);" class="container-span">
+                    <span>Nigth</span>
+                </div>
+                <i id="iconi" class="fa-solid fa-hot-tub-person fa-2xl" style="color: #d32e31;"></i>
+                <br>
+                <h5>Hot tub</h5>
+                </div>
+                </div>
+    </section>
 </body>
 </html>
