--- a/INDEX.html
+++ b/INDEX.html
@@ -1,111 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxygen:wght@300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/90ecd35a7b.js" crossorigin="anonymous"></script>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cards com Variaveis</title>
-</head>
-<body>
-    <section>
-        <!-- CARDS 01 -->
-        <div class="container-cards">
-        <!-- CARD 1 -->
-        <div class="cards card-01">
-        <div class="container-span span-01">
-            <span>7:25 AM</span>
-        </div>
-        <i id="iconi" class="fa-solid fa-plane-departure fa-2xl" style="color: #0097ab;"></i>
-        <br>
-            <h5>Boston</h5>
-        </div>
-        <!-- CARD 2 -->
-        <div class="cards card-01">
-        <div class="container-span span-01">
-            <span>8:15 PM</span>
-        </div>
-        <i id="iconi" class="fa-solid fa-plane-arrival fa-2xl" style="color: #0097ab;"></i>
-        <br>
-            <h5>Madrid</h5>
-        </div>
-        <!-- CARD 3 -->
-        <div class="cards card-01">
-        <div class="container-span span-01">
-            <span>Translate</span>
-        </div>
-        <i id="iconi" class="fa-solid fa-language fa-2xl" style="color: #0097ab;"></i>
-        <br>
-            <h5>Spanish</h5>
-        </div>
-        </div>
 
-        <!-- --CARDS 02-- -->
-        <div class="container-cards">
-            <!-- CARD 1 -->
-            <div class="cards card-02">
-            <div class="container-span span-02">
-                <span>Bike</span>
-            </div>
-            <i id="iconi" class="fa-solid fa-person-biking fa-2xl" style="color: #f79d00;"></i>
-            <br>
-            <h5>13.1 Miles</h5>
-            </div>
-            <!-- CARD 2 -->
-            <div class="cards card-02">
-                <div class="container-span span-02">
-                <span>Boat</span>
-                </div>
-                <i id="iconi" class="fa-solid fa-ship fa-2xl" style="color: #ff9f00;"></i>
-                <br>
-                <h5>90 Minutes</h5>
-            </div>
-            <!-- CRAD 3 -->
-            <div class="cards card-02">
-            <div class="container-span span-02">
-                <span>Drive</span>
-            </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-            <i id="iconi" class="fa-solid fa-car fa-2xl" style="color: #ff9f00;"></i>
-            <br>
-            <h5>48 Miles</h5>
-            </div>
-            </div>
-            
-            <!-- --CARDS 03-- -->
-            <div class="container-cards">
-                <!-- CARD 1 -->
-                <div class="cards card-03">
-                <div class="container-span span-03">
-                    <span>Morning</span>
-                </div>
-                <i id="iconi" class="fa-solid fa-mug-saucer fa-2xl" style="color: #d32e31;"></i>
-                <br>
-                <h5>Coffee</h5>
-                </div>
-                <!-- CARD 2 -->
-                <div class="cards card-03">
-                <div class="container-span span-03">
-                    <span>Afternoon</span>
-                </div>
-                <i id="iconi" class="fa-solid fa-dumbbell fa-rotate-by fa-2xl" style="color: #d32e31; --fa-rotate-angle: 60deg;"></i>
-                <br>
-                <h5>Gym</h5>
-                </div>
-                <!-- CARD 3 -->
-                <div class="cards card-03">
-                <div class="container-span span-03">
-                    <span>Nigth</span>
-                </div>
-                <i id="iconi" class="fa-solid fa-hot-tub-person fa-2xl" style="color: #d32e31;"></i>
-                <br>
-                <h5>Hot tub</h5>
-                </div>
-                </div>
-    </section>
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+
+    <script
+      src="https://kit.fontawesome.com/90ecd35a7b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <main class="container">
+      <div class="cards cards-green">
+        <div class="card">
+          <h2 class="card-title">7:25 AM</h2>
+          <i class="fa-solid fa-plane-departure card-icon"></i>
+          <span class="card-description">Boston</span>
+        </div>
+        <div class="card">
+          <h2 class="card-title">8:15 PM</h2>
+          <i class="fa-solid fa-plane-arrival card-icon"></i>
+          <span class="card-description">Madrid</span>
+        </div>
+        <div class="card">
+          <h2 class="card-title">Translate</h2>
+          <i class="fa-solid fa-language card-icon"></i>
+          <span class="card-description">Spanish</span>
+        </div>
+      </div>
+
+      <div class="cards cards-orange">
+        <div class="card">
+          <h2 class="card-title">Bike</h2>
+          <i class="fa-solid fa-person-biking card-icon"></i>
+          <span class="card-description">13.1 Miles</span>
+        </div>
+        <div class="card">
+          <h2 class="card-title">Boat</h2>
+          <i class="fa-solid fa-ship card-icon"></i>
+          <span class="card-description">90 Minutes</span>
+        </div>
+        <div class="card">
+          <h2 class="card-title">Drive</h2>
+          <i class="fa-solid fa-car card-icon"></i>
+          <span class="card-description">48 Miles</span>
+        </div>
+      </div>
+
+      <div class="cards cards-red">
+        <div class="card">
+          <h2 class="card-title">Morning</h2>
+          <i class="fa-solid fa-person-biking card-icon"></i>
+          <span class="card-description">Coffee</span>
+        </div>
+        <div class="card">
+          <h2 class="card-title">Afternoon</h2>
+          <i class="fa-solid fa-dumbbell fa-dumbbell-45deg card-icon"></i>
+          <span class="card-description">Gym</span>
+        </div>
+        <div class="card">
+          <h2 class="card-title">Nigth</h2>
+          <i class="fa-solid fa-hot-tub-person card-icon"></i>
+          <span class="card-description">Hot tub</span>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
