codigo atualizad, trecho em css no documento html ja removidos e colocados no Css

--- a/INDEX.html
+++ b/INDEX.html
@@ -20,7 +20,7 @@
         <div class="container-span span-01">
             <span>7:25 AM</span>
         </div>
-        <i id="iconi" class="fa-solid fa-plane-departure fa-2xl" style="color: #0097ab;"></i>
+        <i id="iconi" class="fa-solid fa-plane-departure fa-2xl icon01"></i>
         <br>
             <h5>Boston</h5>
         </div>
@@ -29,7 +29,7 @@
         <div class="container-span span-01">
             <span>8:15 PM</span>
         </div>
-        <i id="iconi" class="fa-solid fa-plane-arrival fa-2xl" style="color: #0097ab;"></i>
+        <i id="iconi" class="fa-solid fa-plane-arrival fa-2xl icon01"></i>
         <br>
             <h5>Madrid</h5>
         </div>
@@ -38,7 +38,7 @@
         <div class="container-span span-01">
             <span>Translate</span>
         </div>
-        <i id="iconi" class="fa-solid fa-language fa-2xl" style="color: #0097ab;"></i>
+        <i id="iconi" class="fa-solid fa-language fa-2xl icon01"></i>
         <br>
             <h5>Spanish</h5>
         </div>
@@ -51,7 +51,7 @@
             <div class="container-span span-02">
                 <span>Bike</span>
             </div>
-            <i id="iconi" class="fa-solid fa-person-biking fa-2xl" style="color: #f79d00;"></i>
+            <i id="iconi" class="fa-solid fa-person-biking fa-2xl icon02"></i>
             <br>
             <h5>13.1 Miles</h5>
             </div>
@@ -60,7 +60,7 @@
                 <div class="container-span span-02">
                 <span>Boat</span>
                 </div>
-                <i id="iconi" class="fa-solid fa-ship fa-2xl" style="color: #ff9f00;"></i>
+                <i id="iconi" class="fa-solid fa-ship fa-2xl icon02"></i>
                 <br>
                 <h5>90 Minutes</h5>
             </div>
@@ -70,7 +70,7 @@
                 <span>Drive</span>
             </div>
 
-            <i id="iconi" class="fa-solid fa-car fa-2xl" style="color: #ff9f00;"></i>
+            <i id="iconi" class="fa-solid fa-car fa-2xl icon02"></i>
             <br>
             <h5>48 Miles</h5>
             </div>
@@ -83,7 +83,7 @@
                 <div class="container-span span-03">
                     <span>Morning</span>
                 </div>
-                <i id="iconi" class="fa-solid fa-mug-saucer fa-2xl" style="color: #d32e31;"></i>
+                <i id="iconi" class="fa-solid fa-mug-saucer fa-2xl icon03"></i>
                 <br>
                 <h5>Coffee</h5>
                 </div>
@@ -92,7 +92,7 @@
                 <div class="container-span span-03">
                     <span>Afternoon</span>
                 </div>
-                <i id="iconi" class="fa-solid fa-dumbbell fa-rotate-by fa-2xl" style="color: #d32e31; --fa-rotate-angle: 60deg;"></i>
+                <i id="iconi" class="fa-solid fa-dumbbell fa-rotate-by fa-2xl icon03"></i>
                 <br>
                 <h5>Gym</h5>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="container-span span-03">
                     <span>Nigth</span>
                 </div>
-                <i id="iconi" class="fa-solid fa-hot-tub-person fa-2xl" style="color: #d32e31;"></i>
+                <i id="iconi" class="fa-solid fa-hot-tub-person fa-2xl icon03"></i>
                 <br>
                 <h5>Hot tub</h5>
                 </div>
